source/stylesheets/noble/partials/_primary-nav.scss
// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

.primary-nav {
    @include clearfix;
    position: absolute;
    bottom: 0;
    right: 0;
    margin-bottom: 0; // ugh
}

.primary-nav-item {
    @include type(1.6, 1.6, '', $font-family-primary-1);
    float: left;
    list-style: none;
    margin-left: 2em;
    position: relative;
    a {
        &:link,
        &:visited {
            text-decoration: none;
            color: $colour-dusty-gray;
        }
        &:focus,
        &:hover,
        &:active {
            text-decoration: none;
            color: $colour-burning-orange;
        }
    }
}

.home .primary-nav-item.-home,
.products .primary-nav-item.-products,
.how-it-works .primary-nav-item.-how-it-works,
.careers .primary-nav-item.-careers,
.our-story .primary-nav-item.-our-story,
.about .primary-nav-item.-about {
    &:after {
        display: block;
        position: absolute;
        bottom: -0.25em;
        left: 0;
        content: ' ';
        width: 1em;
        height: 1px;
        background-color: $colour-burning-orange;
    }
    a {
        &:link,
        &:visited {
            color: $colour-mine-shaft;
        }
        &:focus,
        &:hover,
        &:active {
            color: $colour-burning-orange;
        }
    }
}

// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

